--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel ./index.html",
-    "build": "parcel build ./index.html"
+    "dev": "parcel ./index.html --no-cache",
+    "build": "parcel build ./index.html --no-cache"
   },
   "keywords": [],
   "author": "",
